Fix padding, margin and text size on small screen

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,6 @@
 p,
 h2,
 ul {
-  font-size: 30px;
   font-family: "Jersey 15";
 }
 
